// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render device dashboard 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
  border: none;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c8:hover,
.c8:focus {
  background: #B29DFF;
}

.c8:active {
  background: #C5B6FF;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c20:hover,
.c20:focus {
  background: rgba(255,255,255,0.07);
}

.c20:active {
  background: rgba(255,255,255,0.13);
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c19 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c18 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
  border: none;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c16 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.c16 > thead > tr > th,
.c16 > tbody > tr > th,
.c16 > tfoot > tr > th,
.c16 > thead > tr > td,
.c16 > tbody > tr > td,
.c16 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c16 > thead > tr > th:first-child,
.c16 > tbody > tr > th:first-child,
.c16 > tfoot > tr > th:first-child,
.c16 > thead > tr > td:first-child,
.c16 > tbody > tr > td:first-child,
.c16 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c16 > thead > tr > th:last-child,
.c16 > tbody > tr > th:last-child,
.c16 > tfoot > tr > th:last-child,
.c16 > thead > tr > td:last-child,
.c16 > tbody > tr > td:last-child,
.c16 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c16 > tbody > tr > td {
  vertical-align: middle;
}

.c16 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c16 > thead > tr > th svg {
  height: 12px;
}

.c16 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c16 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c16 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c10 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c9 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c15 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c14 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c12 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c11 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c13 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c13:hover,
.c13:focus,
.c13:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c13::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c17 > tbody > tr td {
  vertical-align: middle;
  height: 32px;
}

<div
  class="c0 c1 c2"
  style="width: 904px; padding: 0px;"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Two-Factor Devices
    </div>
    <button
      class="c8"
      kind="primary"
      title=""
    >
      Add two-factor device
    </button>
  </div>
  <div
    class="c9"
  >
    <nav
      class="c10"
    >
      <div
        class="c11"
      >
        <div
          class="c12"
        >
          <input
            class="c13"
            placeholder="SEARCH..."
            value=""
          />
          <div
            class="c14"
          >
            <div
              class="c15"
            />
          </div>
        </div>
      </div>
    </nav>
    <table
      class="c16 c17"
      style="max-width: 100%;"
    >
      <thead>
        <tr>
          <th
            style="cursor: default;"
          >
            Type
          </th>
          <th
            style="cursor: default;"
          >
            Device Name
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Registered
              <span
                class="c18 icon icon-chevrondown"
                title="sort items desc"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Last Used
              <span
                class="c18 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Authenticator App
          </td>
          <td
            title="iphone 12"
          >
            <div
              class="c19"
              style="max-width: 96px; white-space: nowrap;"
            >
              iphone 12
            </div>
          </td>
          <td>
            2021-08-12
          </td>
          <td>
            2021-08-12
          </td>
          <td
            align="right"
          >
            <button
              class="c20"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="solokey"
          >
            <div
              class="c19"
              style="max-width: 96px; white-space: nowrap;"
            >
              solokey
            </div>
          </td>
          <td>
            2021-06-15
          </td>
          <td>
            2021-06-18
          </td>
          <td
            align="right"
          >
            <button
              class="c20"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="backup yubikey"
          >
            <div
              class="c19"
              style="max-width: 96px; white-space: nowrap;"
            >
              backup yubikey
            </div>
          </td>
          <td>
            2021-04-18
          </td>
          <td>
            2021-07-16
          </td>
          <td
            align="right"
          >
            <button
              class="c20"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="yubikey"
          >
            <div
              class="c19"
              style="max-width: 96px; white-space: nowrap;"
            >
              yubikey
            </div>
          </td>
          <td>
            2021-02-05
          </td>
          <td>
            2021-02-28
          </td>
          <td
            align="right"
          >
            <button
              class="c20"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render failed state for creating restricted privilege token 1`] = `
.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-bottom: 16px;
  background: #FF6257;
  color: #000000;
}

.c9 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
  border: none;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c8:hover,
.c8:focus {
  background: #B29DFF;
}

.c8:active {
  background: #C5B6FF;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c21:hover,
.c21:focus {
  background: rgba(255,255,255,0.07);
}

.c21:active {
  background: rgba(255,255,255,0.13);
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c19 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
  border: none;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c17 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.c17 > thead > tr > th,
.c17 > tbody > tr > th,
.c17 > tfoot > tr > th,
.c17 > thead > tr > td,
.c17 > tbody > tr > td,
.c17 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c17 > thead > tr > th:first-child,
.c17 > tbody > tr > th:first-child,
.c17 > tfoot > tr > th:first-child,
.c17 > thead > tr > td:first-child,
.c17 > tbody > tr > td:first-child,
.c17 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c17 > thead > tr > th:last-child,
.c17 > tbody > tr > th:last-child,
.c17 > tfoot > tr > th:last-child,
.c17 > thead > tr > td:last-child,
.c17 > tbody > tr > td:last-child,
.c17 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c17 > tbody > tr > td {
  vertical-align: middle;
}

.c17 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c17 > thead > tr > th svg {
  height: 12px;
}

.c17 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c17 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c17 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c11 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c10 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c16 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c15 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c13 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c12 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c14 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c14:hover,
.c14:focus,
.c14:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c14::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c18 > tbody > tr td {
  vertical-align: middle;
  height: 32px;
}

<div
  class="c0 c1 c2"
  style="width: 904px; padding: 0px;"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Two-Factor Devices
    </div>
    <button
      class="c8"
      kind="primary"
      title=""
    >
      Add two-factor device
    </button>
  </div>
  <div
    class="c9"
    kind="danger"
  >
    failed to create privilege token
  </div>
  <div
    class="c10"
  >
    <nav
      class="c11"
    >
      <div
        class="c12"
      >
        <div
          class="c13"
        >
          <input
            class="c14"
            placeholder="SEARCH..."
            value=""
          />
          <div
            class="c15"
          >
            <div
              class="c16"
            />
          </div>
        </div>
      </div>
    </nav>
    <table
      class="c17 c18"
      style="max-width: 100%;"
    >
      <thead>
        <tr>
          <th
            style="cursor: default;"
          >
            Type
          </th>
          <th
            style="cursor: default;"
          >
            Device Name
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Registered
              <span
                class="c19 icon icon-chevrondown"
                title="sort items desc"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Last Used
              <span
                class="c19 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Authenticator App
          </td>
          <td
            title="iphone 12"
          >
            <div
              class="c20"
              style="max-width: 96px; white-space: nowrap;"
            >
              iphone 12
            </div>
          </td>
          <td>
            2021-08-12
          </td>
          <td>
            2021-08-12
          </td>
          <td
            align="right"
          >
            <button
              class="c21"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="solokey"
          >
            <div
              class="c20"
              style="max-width: 96px; white-space: nowrap;"
            >
              solokey
            </div>
          </td>
          <td>
            2021-06-15
          </td>
          <td>
            2021-06-18
          </td>
          <td
            align="right"
          >
            <button
              class="c21"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="backup yubikey"
          >
            <div
              class="c20"
              style="max-width: 96px; white-space: nowrap;"
            >
              backup yubikey
            </div>
          </td>
          <td>
            2021-04-18
          </td>
          <td>
            2021-07-16
          </td>
          <td
            align="right"
          >
            <button
              class="c21"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="yubikey"
          >
            <div
              class="c20"
              style="max-width: 96px; white-space: nowrap;"
            >
              yubikey
            </div>
          </td>
          <td>
            2021-02-05
          </td>
          <td>
            2021-02-28
          </td>
          <td
            align="right"
          >
            <button
              class="c21"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render failed state for fetching devices 1`] = `
.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-bottom: 16px;
  background: #FF6257;
  color: #000000;
}

.c9 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
  border: none;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c8:hover,
.c8:focus {
  background: #B29DFF;
}

.c8:active {
  background: #C5B6FF;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
  border: none;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="c0 c1 c2"
  style="width: 904px; padding: 0px;"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Two-Factor Devices
    </div>
    <button
      class="c8"
      kind="primary"
      title=""
    >
      Add two-factor device
    </button>
  </div>
  <div
    class="c9"
    kind="danger"
  >
    failed to fetch devices
  </div>
</div>
`;
